Add missing pipe

--- a/templates/secrets/smtp.yaml
+++ b/templates/secrets/smtp.yaml
@@ -7,5 +7,5 @@ metadata:
 {{ include "appwrite.labels" $ | indent 4 }}
 type: Opaque
 data:
-  _APP_SMTP_USERNAME: {{ .Values.smtp.user | b64enc }}
-  _APP_SMTP_PASSWORD: {{ .Values.smtp.pass | b64enc }}
+  _APP_SMTP_USERNAME: {{ .Values.smtp.user | b64enc | quote }}
+  _APP_SMTP_PASSWORD: {{ .Values.smtp.pass | b64enc | quote }}
