--- a/templates/config/env.yaml
+++ b/templates/config/env.yaml
@@ -10,7 +10,7 @@ data:
   _APP_CONSOLE_WHITELIST_IPS: {{ include "array.join" .Values.appwrite.console.whitelist.ips }}
   _APP_CONSOLE_WHITELIST_ROOT: {{ include "boolToStr" .Values.appwrite.console.whitelist.root }}
   _APP_DB_USER: {{ .Values.mariadb.auth.username }}
-  _APP_DB_PORT: {{ "3306" }}
+  _APP_DB_PORT: {{ "3306" | quote }}
   _APP_DB_SCHEMA: {{ "appwrite" }}
   _APP_DB_HOST: {{ include "appwrite.fullname" . | printf "%s-mariadb" }}
   _APP_DOMAIN: {{ .Values.appwrite.domain | quote }}
